Doc: Clarify the usage of file filters in QFileDialog

This commit restructures and enhances the description of the file
filters in QFileDialog. The commit adds info on MIME type filters and
clarifies the case sensitivity of file filters on various
platforms.

Fixes: QTBUG-135381
Pick-to: 6.10 6.8
Change-Id: I1fa7eeefb0e242285ee3bc4a86f29b76f72abe8f
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Alexei Cazacov <alexei.cazacov@qt.io>